[tool.poetry]
name = "hpl-phases"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hpl_phases"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
metricq = "^4.2.0"
click = "^8.1.3"
click-completion = "^0.5.2"
click-log = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
